# clinical-knowledge-agent

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: CODING_GUIDELINES.md  copilot-instructions.md
.github/workflows/: ci.yml  sync-to-huggingface.yml
clinical-knowledge-agent/: AI_PROMPT.md  requirements.txt
deploy/: README.md  space_README.md
docs/: architecture.md
examples/sample_docs/: diabetes_management_guideline.md  hypertension_management_guideline.md
notebooks/: 01_demo_walkthrough.ipynb
scripts/: evaluate.py
src/embeddings/: embedder.py
src/generation/: rag_chain.py
src/ingestion/: chunker.py  document_loader.py
src/retrieval/: vector_store.py
src/utils/: clinical_prompts.py
tests/: conftest.py  test_chunker.py  test_clinical_prompts.py  test_document_loader.py  test_embedder.py  test_evaluate.py  test_rag_chain.py  test_vector_store.py
tests/fixtures/: pdf_factory.py
